# kindle_fetch

./: README.md  fetch_latest_kindle.py  flake.nix  pyproject.toml
kindle_fetch/: imap.py  kindle_fetch.py
