[tool.poetry]
name = "kindle_fetch"
version = "0.1.1"
description = ""
authors = ["Valentin Boettcher <hiro@protagon.space>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aioimaplib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
kindle_fetch = 'kindle_fetch.kindle_fetch:main'
